# serializer version: 1
# name: test_devices[{('tesla_fleet', '123456')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tesla_fleet',
        '123456',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Powerwall 2, Tesla Backup Gateway 2',
    'model_id': None,
    'name': 'Energy Site',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '123456',
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[{('tesla_fleet', 'LRWXF7EK4KC700000')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tesla_fleet',
        'LRWXF7EK4KC700000',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Model X',
    'model_id': None,
    'name': 'Test',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'LRWXF7EK4KC700000',
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[{('tesla_fleet', 'abd-123')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tesla_fleet',
        'abd-123',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Gen 3 Wall Connector',
    'model_id': None,
    'name': 'Wall Connector',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '123',
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
# name: test_devices[{('tesla_fleet', 'bcd-234')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tesla_fleet',
        'bcd-234',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Gen 3 Wall Connector',
    'model_id': None,
    'name': 'Wall Connector',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '234',
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
